--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
-    "morgan": "^1.10.0", 
     "pm2": "^5.1.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3" 
+    "cross-env": "^7.0.3"
   }
 }
